--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -2,9 +2,8 @@ name: Deploy-to-dev
 on:
   push:
     tags:
-      - "v*"
-      - "!v*-test"
-      - "!v*-dev"
+      - "v*-test"
+      - "v*-dev"
 jobs:
   deploy:
     runs-on: ubuntu-latest
