--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -24,8 +24,8 @@ jobs:
           echo "REACT_APP_PDL_URL=https://www-q0.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
           echo "REACT_APP_BFT_URL=https://www-q0.nav.no/person/behov-for-tilrettelegging" >> $GITHUB_ENV
           echo "REACT_APP_SKJERMING_URL=https://www-q0.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
-          echo "REACT_APP_URL=https://ww.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
-          echo "REACT_APP_API_URL=https://ww.dev.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
+          echo "REACT_APP_URL=https://www.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
+          echo "REACT_APP_API_URL=https://www.dev.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
           echo "REACT_APP_DSOP_URL=https://www.dev.nav.no/person/dsop-api" >> $GITHUB_ENV
           echo "REACT_APP_TJENESTER_URL=https://tjenester-q0.nav.no" >> $GITHUB_ENV
           echo "REACT_APP_LOGIN_URL=https://loginservice.dev.nav.no/login" >> $GITHUB_ENV
