--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -20,14 +20,14 @@ jobs:
           echo "GITHUB_TOKEN=$(echo ${GITHUB_TOKEN})" >> $GITHUB_ENV
       - name: Define client-side environment
         run: |
-          echo "REACT_APP_MILJO=Q1" >> $GITHUB_ENV
-          echo "REACT_APP_PDL_URL=https://www-q0.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
-          echo "REACT_APP_BFT_URL=https://www-q0.nav.no/person/behov-for-tilrettelegging" >> $GITHUB_ENV
-          echo "REACT_APP_SKJERMING_URL=https://www-q0.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
+          echo "REACT_APP_MILJO=DEV" >> $GITHUB_ENV
+          echo "REACT_APP_PDL_URL=https://www-q1.nav.no/person/pdl-fullmakt-ui" >> $GITHUB_ENV
+          echo "REACT_APP_BFT_URL=https://www-q1.nav.no/person/behov-for-tilrettelegging" >> $GITHUB_ENV
+          echo "REACT_APP_SKJERMING_URL=https://www-q1.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
           echo "REACT_APP_URL=https://www.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
           echo "REACT_APP_API_URL=https://www.dev.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
           echo "REACT_APP_DSOP_URL=https://www.dev.nav.no/person/dsop-api" >> $GITHUB_ENV
-          echo "REACT_APP_TJENESTER_URL=https://tjenester-q0.nav.no" >> $GITHUB_ENV
+          echo "REACT_APP_TJENESTER_URL=https://tjenester-q1.nav.no" >> $GITHUB_ENV
           echo "REACT_APP_LOGIN_URL=https://loginservice.dev.nav.no/login" >> $GITHUB_ENV
           echo "REACT_APP_DITT_NAV_URL=https://www.dev.nav.no/person/dittnav" >> $GITHUB_ENV
           echo "REACT_APP_PENSJONSOPPTJENING_URL=https://www-q0.nav.no/pensjon/opptjening" >> $GITHUB_ENV
