--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@navikt/nav-dekoratoren-moduler": "^1.0.30",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^15.2.1",
     "mustache-express": "^1.3.0",
     "node-cache": "^5.1.2",
+    "react": "^16.14.0",
     "winston": "^3.3.3"
   },
   "browserslist": [
