--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-collapse": "^5.1.0",
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.14.0",
+    "react-html-parser": "^2.0.2",
     "react-intl": "^5.10.16",
     "react-modal": "^3.12.1",
     "react-moment": "^0.9.7",
@@ -100,6 +101,7 @@
     "@types/node": "14.14.22",
     "@types/react": "16.14.2",
     "@types/react-dom": "16.9.10",
+    "@types/react-html-parser": "^2.0.1",
     "@types/react-intl": "^3.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.7",
