--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ibantools": "^3.2.2",
     "intl": "^1.2.5",
     "js-cookie": "^2.2.1",
+    "jsdom": "^15.2.1",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.29.1",
     "nav-frontend-alertstriper": "^3.0.42",
@@ -100,6 +101,7 @@
     "@types/fetch-mock": "^7.3.3",
     "@types/file-saver": "^2.0.1",
     "@types/js-cookie": "^2.2.6",
+    "@types/jsdom": "^16.2.6",
     "@types/node": "14.14.22",
     "@types/node-cache": "^4.2.5",
     "@types/node-fetch": "^2.5.8",
