--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "jsdom": "^15.2.1",
     "mustache-express": "^1.3.0",
     "node-cache": "^5.1.2",
+    "node-fetch": "^2.6.1",
     "react": "^16.14.0",
+    "react-html-parser": "^2.0.2",
     "winston": "^3.3.3"
   },
   "browserslist": [
