--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^3.8.3",
     "fetch-mock": "^9.11.0",
     "file-saver": "^2.0.5",
+    "html-react-parser": "^1.2.4",
     "ibantools": "^3.2.2",
     "intl": "^1.2.5",
     "js-cookie": "^2.2.1",
@@ -84,7 +85,6 @@
     "react-collapse": "^5.1.0",
     "react-day-picker": "^7.4.8",
     "react-dom": "^16.14.0",
-    "react-html-parser": "^2.0.2",
     "react-intl": "^5.10.16",
     "react-modal": "^3.12.1",
     "react-moment": "^0.9.7",
@@ -107,7 +107,6 @@
     "@types/node-fetch": "^2.5.8",
     "@types/react": "16.14.2",
     "@types/react-dom": "16.9.10",
-    "@types/react-html-parser": "^2.0.1",
     "@types/react-intl": "^3.0.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.7",
