--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@navikt/nav-dekoratoren-moduler": "^1.1.5",
+    "@navikt/nav-dekoratoren-moduler": "^1.1.7-beta.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "html-react-parser": "^1.2.4",
     "jsdom": "^15.2.1",
     "mustache-express": "^1.3.0",
     "node-cache": "^5.1.2",
-    "node-fetch": "^2.6.1",
     "react": "^16.14.0",
     "winston": "^3.3.3"
   },
