--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@navikt/arbeidsforhold": "^1.4.0",
     "@navikt/fnrvalidator": "^1.1.3",
-    "@navikt/nav-dekoratoren-moduler": "^1.2.0-beta.1",
+    "@navikt/nav-dekoratoren-moduler": "^1.2.1",
     "@react-pdf/renderer": "^2.0.0-beta.18",
     "calidation": "^1.16.1",
     "core-js": "^3.8.3",
