--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@navikt/nav-dekoratoren-moduler": "^1.2.0-beta.1",
+    "@navikt/nav-dekoratoren-moduler": "^1.2.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "html-react-parser": "^1.2.4",
