--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "postversion": "git push && git push --tags && rm -rf build"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "^1.4.0",
+    "@navikt/arbeidsforhold": "^1.4.2-beta.0",
     "@navikt/fnrvalidator": "^1.1.3",
     "@navikt/nav-dekoratoren-moduler": "^1.2.2",
     "@react-pdf/renderer": "^2.0.0-beta.18",
