--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@navikt/arbeidsforhold": "^1.4.2",
     "@navikt/fnrvalidator": "^1.1.3",
     "@navikt/nav-dekoratoren-moduler": "^1.2.2",
-    "@react-pdf/renderer": "^2.0.0-beta.18",
+    "@react-pdf/renderer": "^2.0.8",
     "calidation": "^1.16.1",
     "core-js": "^3.8.3",
     "fetch-mock": "^9.11.0",
@@ -90,9 +90,10 @@
     "react-moment": "^0.9.7",
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^4.0.3",
     "react-scrollable-anchor": "^0.6.1",
     "react-select": "^3.1.0",
+    "ssri": "^6.0.2",
     "typescript": "^3.9.5"
   },
   "devDependencies": {
