--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@navikt/arbeidsforhold": "^1.4.2",
     "@navikt/fnrvalidator": "^1.1.3",
-    "@navikt/nav-dekoratoren-moduler": "^1.2.2",
+    "@navikt/nav-dekoratoren-moduler": "^1.2.10",
     "@react-pdf/renderer": "^2.0.8",
     "calidation": "^1.16.1",
     "core-js": "^3.8.3",
@@ -36,8 +36,8 @@
     "jsdom": "^15.2.1",
     "lodash.throttle": "^4.1.1",
     "moment": "^2.29.1",
-    "nav-frontend-alertstriper": "^3.0.42",
-    "nav-frontend-alertstriper-style": "^2.0.33",
+    "nav-frontend-alertstriper": "^3.1.1",
+    "nav-frontend-alertstriper-style": "^2.1.1",
     "nav-frontend-chevron": "^1.0.25",
     "nav-frontend-chevron-style": "^0.3.10",
     "nav-frontend-core": "^5.0.11",
@@ -45,8 +45,8 @@
     "nav-frontend-ekspanderbartpanel-style": "^1.0.36",
     "nav-frontend-etiketter": "^2.0.24",
     "nav-frontend-etiketter-style": "^1.0.17",
-    "nav-frontend-hjelpetekst": "^2.0.50",
-    "nav-frontend-hjelpetekst-style": "^2.0.38",
+    "nav-frontend-hjelpetekst": "^2.1.2",
+    "nav-frontend-hjelpetekst-style": "^2.1.1",
     "nav-frontend-ikoner-assets": "^2.0.8",
     "nav-frontend-js-utils": "^1.0.15",
     "nav-frontend-knapper": "^2.0.27",
@@ -85,12 +85,12 @@
     "react-collapse": "^5.1.0",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
-    "react-intl": "^5.10.16",
+    "react-intl": "^5.17.4",
     "react-modal": "^3.12.1",
     "react-moment": "^0.9.7",
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "3.4.4",
     "react-scrollable-anchor": "^0.6.1",
     "react-select": "^3.1.0",
     "ssri": "^6.0.2",
