--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 ENV=prod
 REACT_APP_MILJO=LOCAL
 REACT_APP_URL=http://localhost:3000/person/personopplysninger
+REACT_APP_DINE_SAKER_URL=https://person.nav.no/mine-saker
 REACT_APP_PDL_URL=https://www.nav.no/person/pdl-fullmakt-ui
 REACT_APP_BFT_URL=https://www.nav.no/person/behov-for-tilrettelegging
 REACT_APP_SKJERMING_URL=https://www.nav.no/person/personopplysninger/skjerming
