--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "mustache-express": "^1.3.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
-    "react": "^16.14.0"
+    "react": "^16.14.0",
+    "winston": "^3.3.3"
   },
   "browserslist": [
     ">0.2%",
