--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "^v1.5.0",
+    "@navikt/arbeidsforhold": "^v1.5.1-beta.0",
     "@navikt/fnrvalidator": "^1.1.3",
     "@navikt/nav-dekoratoren-moduler": "^1.6.13",
     "@react-pdf/renderer": "^2.0.8",
