--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "^v1.5.1-beta.0",
-    "@navikt/fnrvalidator": "^1.1.3",
+    "@navikt/arbeidsforhold": "^v1.5.1-beta.1",
+    "@navikt/fnrvalidator": "^1.3.0",
     "@navikt/nav-dekoratoren-moduler": "^1.6.13",
-    "@react-pdf/renderer": "^2.0.8",
+    "@react-pdf/renderer": "^2.3.0",
     "calidation": "^1.16.1",
     "core-js": "^3.8.3",
     "fetch-mock": "^9.11.0",
@@ -35,7 +35,7 @@
     "intl": "^1.2.5",
     "jsdom": "^15.2.1",
     "lodash.throttle": "^4.1.1",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "nav-frontend-alertstriper": "^3.1.1",
     "nav-frontend-alertstriper-style": "^2.1.1",
     "nav-frontend-chevron": "^1.0.25",
@@ -90,7 +90,7 @@
     "react-moment": "^0.9.7",
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^5.0.1",
     "react-select": "^3.1.0",
     "ssri": "^6.0.2",
     "typescript": "^3.9.5"
@@ -111,7 +111,7 @@
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^3.0.19",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.2",
     "less": "^3.13.1",
     "less-plugin-npm-import": "^2.1.0",
     "less-watch-compiler": "^1.14.6",
