--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "react-moment": "^0.9.7",
     "react-motion": "^0.5.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^3.1.0",
     "ssri": "^6.0.2",
     "typescript": "^3.9.5"
