--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "^v1.5.1-beta.3",
+    "@navikt/arbeidsforhold": "^2.0.0",
     "@navikt/fnrvalidator": "^1.3.0",
     "@navikt/nav-dekoratoren-moduler": "^1.7.0",
     "@react-pdf/renderer": "^3.0.0",
