--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@navikt/arbeidsforhold": "^2.0.1",
+    "@navikt/ds-react": "^1.3.7",
     "@navikt/fnrvalidator": "^1.3.0",
     "@navikt/nav-dekoratoren-moduler": "^1.7.0",
     "@react-pdf/renderer": "^3.0.0",
@@ -117,9 +118,7 @@
     "tslint": "^6.1.3",
     "tslint-react": "^5.0.0"
   },
-  "resolutions": {
-
-  },
+  "resolutions": {},
   "browserslist": {
     "production": [
       ">0.2%",
