--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@navikt/arbeidsforhold": "^2.0.1",
+    "@navikt/ds-css": "^1.3.8",
     "@navikt/ds-react": "^1.3.7",
     "@navikt/fnrvalidator": "^1.3.0",
     "@navikt/nav-dekoratoren-moduler": "^1.7.0",
@@ -42,7 +43,6 @@
     "nav-frontend-chevron": "^1.0.30",
     "nav-frontend-chevron-style": "^1.0.4",
     "nav-frontend-core": "^6.0.1",
-    "nav-frontend-ekspanderbartpanel": "^4.0.4",
     "nav-frontend-ekspanderbartpanel-style": "^2.0.2",
     "nav-frontend-etiketter": "^3.0.3",
     "nav-frontend-etiketter-style": "^2.0.3",
