--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@navikt/arbeidsforhold": "^2.0.1",
     "@navikt/ds-css": "^1.3.8",
+    "@navikt/ds-icons": "^1.3.17",
     "@navikt/ds-react": "^1.3.7",
     "@navikt/fnrvalidator": "^1.3.0",
     "@navikt/nav-dekoratoren-moduler": "^1.7.0",
@@ -44,21 +45,16 @@
     "nav-frontend-chevron-style": "^1.0.4",
     "nav-frontend-core": "^6.0.1",
     "nav-frontend-ekspanderbartpanel-style": "^2.0.2",
-    "nav-frontend-etiketter": "^3.0.3",
     "nav-frontend-etiketter-style": "^2.0.3",
     "nav-frontend-hjelpetekst": "^3.1.3",
     "nav-frontend-hjelpetekst-style": "^3.0.2",
     "nav-frontend-ikoner-assets": "^3.0.1",
     "nav-frontend-js-utils": "^1.0.20",
-    "nav-frontend-knapper": "^3.1.3",
     "nav-frontend-knapper-style": "^2.1.2",
-    "nav-frontend-lenkepanel": "^2.0.2",
     "nav-frontend-lenkepanel-style": "^2.0.2",
-    "nav-frontend-lenker": "^2.0.2",
     "nav-frontend-lenker-style": "^2.0.2",
     "nav-frontend-lesmerpanel": "2.0.3",
     "nav-frontend-lesmerpanel-style": "2.0.2",
-    "nav-frontend-lukknapp": "^2.0.2",
     "nav-frontend-lukknapp-style": "^2.0.2",
     "nav-frontend-modal": "^2.0.2",
     "nav-frontend-modal-style": "^2.0.2",
@@ -68,15 +64,12 @@
     "nav-frontend-popover-style": "2.0.2",
     "nav-frontend-skjema": "^4.0.6",
     "nav-frontend-skjema-style": "^3.0.3",
-    "nav-frontend-spinner": "^3.0.1",
     "nav-frontend-spinner-style": "^1.0.2",
     "nav-frontend-tabs": "2.0.3",
     "nav-frontend-tabs-style": "2.0.2",
     "nav-frontend-typografi": "^4.0.2",
     "nav-frontend-typografi-style": "^2.0.2",
-    "nav-frontend-veileder": "^3.0.3",
     "nav-frontend-veileder-style": "^3.0.2",
-    "nav-frontend-veilederpanel": "^2.0.3",
     "nav-frontend-veilederpanel-style": "2.0.2",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.2.10",
