--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "^2.0.1",
-    "@navikt/ds-css": "^1.5.6",
-    "@navikt/ds-icons": "^1.5.6",
-    "@navikt/ds-react": "^1.5.6",
+    "@navikt/arbeidsforhold": "^3.0.0-beta.1",
+    "@navikt/ds-css": "^2.0.5",
+    "@navikt/ds-icons": "^2.0.5",
+    "@navikt/ds-react": "^2.0.5",
     "@navikt/fnrvalidator": "^1.3.0",
     "@navikt/nav-dekoratoren-moduler": "^1.7.0",
     "@react-pdf/renderer": "^3.0.0",
