--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "npm-run-all -p build:*",
     "build:js": "react-scripts build",
     "build:css": "less-watch-compiler --run-once",
-    "test": "react-scripts test --watchAll=false",
+    "test": "SET TZ='Europe/Oslo' && react-scripts test --watchAll=false",
     "preversion": "npm test && npm run build",
     "postversion": "git push && git push --tags"
   },
@@ -116,7 +116,6 @@
     "less": "^4.1.3",
     "less-plugin-npm-import": "^2.1.0",
     "less-watch-compiler": "^1.16.3",
-    "moment-timezone": "0.5.39",
     "prettier": "^2.7.1",
     "react-test-renderer": "17.0.2",
     "tslint": "^6.1.3",
