--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-collapse": "^5.1.1",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.2",
+    "react-hook-form": "7.40.0",
     "react-intl": "5.24.6",
     "react-modal": "^3.15.1",
     "react-moment": "^1.1.2",
