--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "^3.0.1-beta.0",
-    "@navikt/ds-css": "^2.0.5",
-    "@navikt/ds-icons": "^2.0.5",
-    "@navikt/ds-react": "^2.0.5",
+    "@navikt/arbeidsforhold": "^3.1.0",
+    "@navikt/ds-css": "2.0.5",
+    "@navikt/ds-icons": "2.0.5",
+    "@navikt/ds-react": "2.0.5",
     "@navikt/fnrvalidator": "^1.3.0",
     "@navikt/nav-dekoratoren-moduler": "^1.7.0",
     "@react-pdf/renderer": "^3.0.2",
@@ -67,8 +67,8 @@
     "@types/jsdom": "^20.0.1",
     "@types/node": "18.7.21",
     "@types/node-fetch": "^2.6.2",
-    "@types/react": "17.0.50",
-    "@types/react-dom": "17.0.17",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^17.0.18",
     "@types/react-modal": "^3.13.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-select": "^3.1.2",
