--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@navikt/arbeidsforhold": "3.1.1-beta.2",
+    "@navikt/arbeidsforhold": "3.1.1",
     "@navikt/ds-css": "2.0.12",
     "@navikt/ds-icons": "2.0.12",
     "@navikt/ds-react": "2.0.12",
