--- a/package.json
+++ b/package.json
@@ -27,60 +27,60 @@
     "@navikt/ds-css": "2.0.12",
     "@navikt/ds-icons": "2.0.12",
     "@navikt/ds-react": "2.0.12",
-    "@navikt/fnrvalidator": "^1.3.0",
-    "@navikt/nav-dekoratoren-moduler": "^1.7.0",
-    "@react-pdf/renderer": "^3.0.2",
-    "buffer": "^6.0.3",
-    "core-js": "^3.25.3",
-    "fetch-mock": "^9.11.0",
-    "file-saver": "^2.0.5",
-    "ibantools": "^4.2.2",
-    "intl": "^1.2.5",
-    "jsdom": "^20.0.0",
-    "lodash.throttle": "^4.1.1",
-    "moment": "^2.29.4",
-    "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.0",
-    "npm-run-all": "^4.1.5",
-    "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-collapse": "^5.1.1",
-    "react-day-picker": "^7.4.10",
-    "react-dom": "^17.0.2",
+    "@navikt/fnrvalidator": "1.3.0",
+    "@navikt/nav-dekoratoren-moduler": "1.8.1",
+    "@react-pdf/renderer": "3.0.2",
+    "buffer": "6.0.3",
+    "core-js": "3.25.3",
+    "fetch-mock": "9.11.0",
+    "file-saver": "2.0.5",
+    "ibantools": "4.2.2",
+    "intl": "1.2.5",
+    "jsdom": "20.0.0",
+    "lodash.throttle": "4.1.1",
+    "moment": "2.29.4",
+    "node-cache": "5.1.2",
+    "node-fetch": "3.3.0",
+    "npm-run-all": "4.1.5",
+    "prop-types": "15.8.1",
+    "react": "17.0.2",
+    "react-collapse": "5.1.1",
+    "react-day-picker": "7.4.10",
+    "react-dom": "17.0.2",
     "react-hook-form": "7.40.0",
     "react-intl": "5.24.6",
-    "react-modal": "^3.16.1",
-    "react-moment": "^1.1.2",
-    "react-router-dom": "^5.3.3",
+    "react-modal": "3.16.1",
+    "react-moment": "1.1.2",
+    "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
-    "react-select": "^3.1.1",
-    "ssri": "^9.0.1",
-    "typescript": "^4.8.3"
+    "react-select": "3.1.1",
+    "ssri": "9.0.1",
+    "typescript": "4.8.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "12.1.5",
-    "@types/fetch-mock": "^7.3.5",
-    "@types/file-saver": "^2.0.5",
-    "@types/jest": "^29.2.5",
-    "@types/js-cookie": "^3.0.2",
-    "@types/jsdom": "^20.0.1",
+    "@types/fetch-mock": "7.3.5",
+    "@types/file-saver": "2.0.5",
+    "@types/jest": "29.2.5",
+    "@types/js-cookie": "3.0.2",
+    "@types/jsdom": "20.0.1",
     "@types/node": "18.11.18",
-    "@types/node-fetch": "^2.6.2",
-    "@types/react": "^17.0.52",
-    "@types/react-dom": "^17.0.18",
-    "@types/react-modal": "^3.13.1",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/react-select": "^3.1.2",
+    "@types/node-fetch": "2.6.2",
+    "@types/react": "17.0.52",
+    "@types/react-dom": "17.0.18",
+    "@types/react-modal": "3.13.1",
+    "@types/react-router-dom": "5.3.3",
+    "@types/react-select": "3.1.2",
     "@types/react-test-renderer": "17.0.1",
-    "classnames": "^2.3.2",
-    "less": "^4.1.3",
-    "less-plugin-npm-import": "^2.1.0",
-    "less-watch-compiler": "^1.16.3",
-    "prettier": "^2.8.2",
+    "classnames": "2.3.2",
+    "less": "4.1.3",
+    "less-plugin-npm-import": "2.1.0",
+    "less-watch-compiler": "1.16.3",
+    "prettier": "2.8.2",
     "react-test-renderer": "17.0.2",
-    "tslint": "^6.1.3",
-    "tslint-react": "^5.0.0"
+    "tslint": "6.1.3",
+    "tslint-react": "5.0.0"
   },
   "resolutions": {},
   "browserslist": {
