--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-moment": "1.1.2",
     "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
-    "react-select": "3.1.1",
+    "react-select": "^4.3.1",
     "ssri": "9.0.1",
     "typescript": "4.8.3"
   },
@@ -71,7 +71,7 @@
     "@types/react-dom": "17.0.18",
     "@types/react-modal": "3.13.1",
     "@types/react-router-dom": "5.3.3",
-    "@types/react-select": "3.1.2",
+    "@types/react-select": "^4.0.18",
     "@types/react-test-renderer": "17.0.1",
     "classnames": "2.3.2",
     "less": "4.1.3",
