--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "NAV",
   "license": "MIT",
   "homepage": "/person/personopplysninger/",
+  "jest": {
+    "resetMocks": false
+  },
   "scripts": {
     "docker-build": "docker build . -t personopplysninger",
     "docker-start": "docker run --name personopplysninger -p 8080:8080 -t -d personopplysninger",
