--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test": "react-scripts test --watchAll=false",
     "preversion": "npm test && npm run build",
     "postversion": "git push && git push --tags",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
     "@navikt/arbeidsforhold": "3.1.2",
@@ -35,6 +36,7 @@
     "@navikt/nav-dekoratoren-moduler": "1.8.1",
     "@react-pdf/renderer": "3.0.2",
     "buffer": "6.0.3",
+    "compression": "1.7.4",
     "core-js": "3.27.1",
     "fetch-mock": "9.11.0",
     "file-saver": "2.0.5",
@@ -58,6 +60,7 @@
     "react-router-dom": "5.3.3",
     "react-scripts": "5.0.1",
     "react-select": "^4.3.1",
+    "source-map-explorer": "2.5.3",
     "ssri": "9.0.1",
     "typescript": "4.9.4"
   },
