--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@navikt/nav-dekoratoren-moduler": "^1.6.9",
+    "compression": "1.7.4",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "html-react-parser": "^3.0.4",
