--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.20.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/fetch-mock": "7.3.5",
     "@types/file-saver": "2.0.5",
     "@types/jest": "29.4.0",
