--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@react-pdf/renderer": "3.1.3",
     "buffer": "6.0.3",
     "core-js": "3.27.2",
+    "dayjs": "1.11.7",
     "fetch-mock": "9.11.0",
     "file-saver": "2.0.5",
     "ibantools": "4.2.2",
     "intl": "1.2.5",
     "jsdom": "20.0.0",
     "lodash.throttle": "4.1.1",
-    "moment": "2.29.4",
     "node-cache": "5.1.2",
     "node-fetch": "3.3.0",
     "npm-run-all": "4.1.5",
@@ -54,7 +54,6 @@
     "react-hook-form": "7.43.0",
     "react-intl": "6.2.8",
     "react-modal": "3.16.1",
-    "react-moment": "1.1.3",
     "react-router-dom": "6.8.1",
     "react-scripts": "5.0.1",
     "react-select": "5.7.0",
