--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -31,7 +31,7 @@ jobs:
           echo "REACT_APP_SKJERMING_URL=https://person.dev.nav.no/person/personopplysninger/skjerming" >> $GITHUB_ENV
           echo "REACT_APP_URL=https://www.dev.nav.no/person/personopplysninger" >> $GITHUB_ENV
           echo "REACT_APP_API_URL=https://person.ekstern.dev.nav.no/person/personopplysninger-api" >> $GITHUB_ENV
-          echo "REACT_APP_DSOP_URL=https://person.dev.nav.no/person/dsop-api" >> $GITHUB_ENV
+          echo "REACT_APP_DSOP_URL=https://person.ekstern.dev.nav.no/person/dsop-api" >> $GITHUB_ENV
           echo "REACT_APP_TJENESTER_URL=https://tjenester-q1.nav.no" >> $GITHUB_ENV
           echo "REACT_APP_LOGIN_URL=https://loginservice.dev.nav.no/login" >> $GITHUB_ENV
           echo "REACT_APP_DITT_NAV_URL=https://www.dev.nav.no/minside" >> $GITHUB_ENV
