--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@types/react-router-dom": "5.3.3",
     "@types/react-select": "5.0.1",
     "@types/react-test-renderer": "18.0.0",
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "9.0.1",
     "classnames": "2.3.2",
     "jest-fetch-mock": "3.0.3",
     "less": "4.1.3",
