--- a/.github/workflows/deploy.dev.yml
+++ b/.github/workflows/deploy.dev.yml
@@ -51,9 +51,9 @@ jobs:
         run: |
           cat > .nais/vars.yaml <<EOF
           ingresses:
-            - https://www.intern.dev.nav.no/person/personopplysninger
+            - https://intern.dev.nav.no/person/personopplysninger
           externalHosts:
-            - www.intern.dev.nav.no
+            - wwwintern.dev.nav.no
             - dev.nav.no
             - person.ekstern.dev.nav.no
             - dekoratoren.dev.nav.no
